--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,18 +1,23 @@
-# NO NEED OF THIS WORKFLOW 
+name: Greetings
 
-# name: Greetings
+on:
+  issues:
+    types: [opened]
+  pull_request_target:
+    types: [opened]
 
-# on: [pull_request_target, issues]
+permissions:
+  issues: write
+  pull-requests: write
 
-# jobs:
-#   greeting:
-#     runs-on: ubuntu-latest
-#     permissions:
-#       issues: write
-#       pull-requests: write
-#     steps:
-#     - uses: actions/first-interaction@v1
-#       with:
-#         repo-token: ${{ secrets.GITHUB_TOKEN }}
-#         issue-message: "Message that will be displayed on users' first issue"
-#         pr-message: "Message that will be displayed on users' first pull request"
+jobs:
+  greeting:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: First Interaction Greeting
+        uses: actions/first-interaction@v1
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          issue-message: "Thanks for opening your first issue! 🎉 We’re happy to have you here."
+          pr-message: "Thanks for your first pull request! 🚀 Great to see your contribution."
